--- a/index.html
+++ b/index.html
@@ -2,125 +2,86 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Birthday Surprise 💗</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Birthday Surprise 🩷</title>
 
 <style>
-body{
+*{
   margin:0;
-  font-family:"Comic Sans MS", cursive;
+  padding:0;
+  box-sizing:border-box;
+  font-family:'Comic Sans MS', cursive;
+}
+
+body{
   overflow:hidden;
 }
 
 .page{
+  width:100vw;
+  height:100vh;
   display:none;
-  min-height:100vh;
-  padding:8vh 6vw;
-  box-sizing:border-box;
+  justify-content:center;
+  align-items:center;
+  flex-direction:column;
   text-align:center;
-  position:relative;
+  padding:20px;
 }
 
 .page.active{
   display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
 }
 
-h1{
-  font-size:clamp(28px,6vw,46px);
-  color:#ff4f8b;
-  z-index:10;
-}
-
-p{
-  font-size:clamp(18px,4.5vw,24px);
-  line-height:1.8;
-  color:#444;
-  max-width:900px;
-  z-index:10;
+h1,p{
+  font-size:clamp(18px,5vw,34px);
+  color:#5a2a3c;
+  line-height:1.6;
 }
 
 button{
-  margin-top:28px;
-  padding:14px 36px;
-  font-size:clamp(16px,4vw,18px);
+  margin-top:30px;
+  padding:12px 30px;
   border:none;
   border-radius:30px;
-  background:#ff8fb1;
+  background:#ff8fab;
   color:white;
+  font-size:18px;
   cursor:pointer;
 }
 
-textarea{
-  width:90%;
-  max-width:600px;
-  height:160px;
-  font-size:16px;
-  border-radius:14px;
-  padding:12px;
-  border:2px solid #ffb6c1;
+button:hover{
+  background:#ff5d8f;
 }
 
-/* Pastel backgrounds */
-.page:nth-child(1){background:#0b0b10;}
-.page:nth-child(2){background:#fff1e6;}
-.page:nth-child(3){background:#fdf2f8;}
-.page:nth-child(4){background:#e8f8f5;}
-.page:nth-child(5){background:#f0f4ff;}
-.page:nth-child(6){background:#fef6e4;}
-.page:nth-child(7){background:#fceef3;}
-.page:nth-child(8){background:#eef6ff;}
-.page:nth-child(9){background:#fff5f5;}
-.page:nth-child(10){background:#f4f9f9;}
-.page:nth-child(11){background:#fdf7ff;}
-.page:nth-child(12){background:#f2fbf7;}
-.page:nth-child(13){background:#fffaf0;}
-.page:nth-child(14){background:#f7f0ff;}
-.page:nth-child(15){background:#f0fff4;}
-.page:nth-child(16){background:#fff0f6;}
-.page:nth-child(17){background:#f8f9ff;}
-.page:nth-child(18){background:#fff1f8;}
-.page:nth-child(19){background:#fdf2f8;}
-
-/* Stickers */
-.stickers{
+/* floating emojis */
+.float{
   position:absolute;
-  inset:0;
-  pointer-events:none;
-  opacity:0.25;
-  font-size:48px;
-  display:flex;
-  flex-wrap:wrap;
-  justify-content:space-around;
-  align-content:space-around;
+  animation:float 6s infinite ease-in-out;
+  opacity:0.4;
+  font-size:24px;
 }
 
-/* Heart animation container only for first page */
-.page:first-child .heart-container {
-  position: absolute;
-  inset: 0;
-  pointer-events: none;
-  z-index: 0; /* behind text */
+@keyframes float{
+  0%{transform:translateY(0);}
+  50%{transform:translateY(-30px);}
+  100%{transform:translateY(0);}
 }
 
-.emoji {
-  position: absolute;
-  font-size: 22px;
-  opacity: 0;
-  animation: grow 0.9s ease forwards;
+/* HEART ANIMATION */
+#heart-box{
+  position:relative;
+  width:300px;
+  height:300px;
+  margin-top:20px;
 }
 
-@keyframes grow {
-  from {
-    transform: translate(var(--sx), var(--sy)) scale(0);
-    opacity: 0;
-  }
-  to {
-    transform: translate(var(--x), var(--y)) scale(1);
-    opacity: 1;
-  }
+.heart{
+  position:absolute;
+  font-size:20px;
+  left:150px;
+  top:150px;
+  opacity:0;
+  transition:all 8s ease-in-out;
 }
 </style>
 </head>
@@ -128,88 +89,122 @@ textarea{
 <body>
 
 <!-- PAGE 1 -->
-<div class="page active">
-  <h1>Are you ready for the surprise? 💕</h1>
-  <p>Wait a few seconds and watch the hearts come together just for you.</p>
-  <button onclick="nextPage()">Yes ➜</button>
-  
-  <!-- Heart animation container -->
-  <div class="heart-container"></div>
+<div class="page active" style="background:#ffd6e0">
+  <h1>Are you ready for your gift? 🩷</h1>
+  <div id="heart-box"></div>
+  <button onclick="nextPage()">Yes 💗</button>
 </div>
 
-<!-- MESSAGE PAGES (17) -->
-<div class="page"><div class="stickers">🎂 🧁 🍰</div><p>Happy 17th birthday to someone who makes days brighter, smiles easier, and moments feel softer just by existing.</p><button onclick="nextPage()">Next ➜</button></div>
-<div class="page"><div class="stickers">🎂 🧁 🍰</div><p>Seventeen feels special today because you’re stepping into another year of becoming even more wonderful.</p><button onclick="nextPage()">Next ➜</button></div>
-<div class="page"><div class="stickers">🎂 🧁 🍰</div><p>This little website was made with patience, excitement, and the hope that it makes you smile.</p><button onclick="nextPage()">Next ➜</button></div>
-<div class="page"><div class="stickers">🎂 🧁 🍰</div><p>I hope your birthday feels light, warm, playful, and filled with happiness you truly deserve.</p><button onclick="nextPage()">Next ➜</button></div>
-<div class="page"><div class="stickers">🎂 🧁 🍰</div><p>Every year you grow a little more amazing, even when you don’t realize it yourself.</p><button onclick="nextPage()">Next ➜</button></div>
-<div class="page"><div class="stickers">🎂 🧁 🍰</div><p>Your smile has a way of making things feel calmer and happier all at once.</p><button onclick="nextPage()">Next ➜</button></div>
-<div class="page"><div class="stickers">🎂 🧁 🍰</div><p>This birthday wish is wrapped with care, kindness, and many tiny happy thoughts.</p><button onclick="nextPage()">Next ➜</button></div>
-<div class="page"><div class="stickers">🎂 🧁 🍰</div><p>I hope seventeen surprises you with good days, proud moments, and gentle joy.</p><button onclick="nextPage()">Next ➜</button></div>
-<div class="page"><div class="stickers">🎂 🧁 🍰</div><p>Thank you for being exactly who you are without trying to be anything else.</p><button onclick="nextPage()">Next ➜</button></div>
-<div class="page"><div class="stickers">🎂 🧁 🍰</div><p>This page exists only to remind you that someone truly cared today.</p><button onclick="nextPage()">Next ➜</button></div>
-<div class="page"><div class="stickers">🎂 🧁 🍰</div><p>I hope this birthday stays in your memory as a soft and happy moment.</p><button onclick="nextPage()">Next ➜</button></div>
-<div class="page"><div class="stickers">🎂 🧁 🍰</div><p>Seventeen candles, seventeen wishes, and many reasons to smile today.</p><button onclick="nextPage()">Next ➜</button></div>
-<div class="page"><div class="stickers">🎂 🧁 🍰</div><p>This year is another chance to grow, laugh, and enjoy little victories.</p><button onclick="nextPage()">Next ➜</button></div>
-<div class="page"><div class="stickers">🎂 🧁 🍰</div><p>May this birthday quietly remind you how valued and appreciated you are.</p><button onclick="nextPage()">Next ➜</button></div>
-<div class="page"><div class="stickers">🎂 🧁 🍰</div><p>I hope today feels gentle, cheerful, and comfortably special.</p><button onclick="nextPage()">Next ➜</button></div>
-<div class="page"><div class="stickers">🎂 🧁 🍰</div><p>Another year older, another reason to celebrate everything you are becoming.</p><button onclick="nextPage()">Next ➜</button></div>
-<div class="page"><div class="stickers">🎂 🧁 🍰</div><p>Happy birthday once again, with playful love and warm wishes.</p><button onclick="nextPage()">Next ➜</button></div>
+<!-- MESSAGE PAGES -->
+<script>
+const messages = [
+"You turning seventeen feels unreal to me because every moment with you feels like a soft dream I never want to wake up from.",
+"You make even the smallest moments feel special just by being yourself and that is honestly my favorite magic about you.",
+"I smile randomly throughout my day because somehow you always find a way to live inside my thoughts rent free.",
+"You are the kind of person who turns ordinary days into memories I want to keep forever in my heart.",
+"Being with you feels like comfort mixed with laughter and wrapped in a warm hug that never ends.",
+"You are not just my favorite person today but my favorite feeling every single day without exception.",
+"Every birthday candle you blow today carries a wish from my heart just for your happiness and smile.",
+"You make me believe in cute moments silly jokes and love that feels easy and natural.",
+"Your laugh is honestly one of my favorite sounds in the world and I hope I hear it forever.",
+"You have this way of making everything feel lighter happier and a little more magical.",
+"Seventeen looks really good on you and so does the happiness you bring into my life.",
+"I hope this year gives you everything you deserve and even more smiles than you expect.",
+"You make loving you feel playful warm and beautifully simple all at the same time.",
+"I am so grateful that out of everyone in this world I get to celebrate you like this.",
+"Every little thing about you feels worth celebrating today and always.",
+"You are proof that some people really do make the world brighter just by existing.",
+"Happy Birthday to the person who makes my heart feel safe silly and full."
+];
 
-<!-- LAST PAGE -->
-<div class="page">
-<h1>Did you like this? 💗</h1>
-<button>Yes</button> &nbsp; <button>No</button>
-<p>Why? (Minimum 50 words)<br>Please write honestly, take a screenshot, and send it to me.</p>
-<textarea placeholder="Write here..."></textarea>
+const colors = [
+"#fff1c1","#e0f7fa","#fce4ec","#e8f5e9","#ede7f6","#fff3e0",
+"#f3e5f5","#e1f5fe","#f9fbe7","#fbe9e7","#e0f2f1","#fce4ec",
+"#e8eaf6","#fffde7","#f1f8e9","#f3e5f5","#e0f7fa"
+];
+
+let body=document.body;
+
+messages.forEach((msg,i)=>{
+  const d=document.createElement("div");
+  d.className="page";
+  d.style.background=colors[i];
+  d.innerHTML=`
+    <span class="float" style="top:10%;left:10%">🎂</span>
+    <span class="float" style="top:70%;left:80%">🧸</span>
+    <p>${msg}</p>
+    <button onclick="nextPage()">Next 💕</button>
+  `;
+  body.appendChild(d);
+});
+</script>
+
+<!-- PAGE 18 -->
+<div class="page" style="background:#ffe4e1">
+  <h1>HAPPY 17th BIRTHDAY 🩷🎉</h1>
+  <p>
+    Today is all about you and I hope you feel loved celebrated
+    and smiled at more than ever before.
+  </p>
+  <button onclick="nextPage()">Next 💗</button>
+</div>
+
+<!-- PAGE 19 -->
+<div class="page" style="background:#ffd1dc">
+  <h1>Do you like this? 💌</h1>
+  <button onclick="showWhy()">Yes 💖</button>
+  <button onclick="showWhy()">No 💭</button>
+  <textarea id="why" placeholder="Why? (minimum 50 words)" style="display:none;margin-top:20px;width:85%;height:160px;border-radius:15px;padding:10px;"></textarea>
+  <button id="submitBtn" style="display:none" onclick="check()">Submit 💕</button>
 </div>
 
 <script>
-let page = 0;
-
-function showPage(n){
-  const pages=document.querySelectorAll(".page");
-  pages.forEach(p=>p.classList.remove("active"));
-  pages[n].classList.add("active");
-  page=n;
-}
+/* navigation */
+let current=0;
+const pages=document.querySelectorAll('.page');
 
 function nextPage(){
-  if(page < 18) showPage(page + 1);
+  pages[current].classList.remove('active');
+  current++;
+  pages[current].classList.add('active');
 }
 
-/* HEART SHAPE ONLY ON FIRST PAGE */
-function createHeartShape(){
-  const container = document.querySelector(".page:first-child .heart-container");
-  const centerX = window.innerWidth / 2;
-  const centerY = window.innerHeight * 0.48;
-  let delay = 0;
+/* heart animation */
+const box=document.getElementById("heart-box");
+const hearts=[];
+for(let i=0;i<120;i++){
+  let h=document.createElement("span");
+  h.className="heart";
+  h.textContent="🩷";
+  box.appendChild(h);
+  hearts.push(h);
+}
 
-  for(let t = 0; t < Math.PI*2; t += 0.12){
-    for(let r = 0; r < 1; r += 0.15){
-      const x = 16 * Math.pow(Math.sin(t),3);
-      const y = 13 * Math.cos(t) - 5 * Math.cos(2*t) - 2 * Math.cos(3*t) - Math.cos(4*t);
+setTimeout(()=>{
+  hearts.forEach((h,i)=>{
+    const t=2*Math.PI*i/120;
+    const x=16*Math.pow(Math.sin(t),3);
+    const y=13*Math.cos(t)-5*Math.cos(2*t)-2*Math.cos(3*t)-Math.cos(4*t);
+    h.style.left=150+x*8+"px";
+    h.style.top=150-y*8+"px";
+    h.style.opacity=1;
+  });
+},100);
 
-      const e = document.createElement("div");
-      e.className = "emoji";
-      e.textContent = "❤️";
-      e.style.left = centerX + "px";
-      e.style.top = centerY + "px";
-      e.style.setProperty("--sx","0px");
-      e.style.setProperty("--sy","140px");
-      e.style.setProperty("--x", (x*10*r) + "px");
-      e.style.setProperty("--y", (-y*10*r) + "px");
-      e.style.animationDelay = delay + "s";
-      container.appendChild(e);
-      delay += 0.02;
-    }
+/* last page */
+function showWhy(){
+  document.getElementById("why").style.display="block";
+  document.getElementById("submitBtn").style.display="block";
+}
+
+function check(){
+  const words=document.getElementById("why").value.trim().split(/\s+/).length;
+  if(words<50){
+    alert("Please write at least 50 words 💗");
+  }else{
+    alert("Take a screenshot and send it to me 🩷");
   }
 }
-
-window.onload = () => {
-  showPage(0);
-  createHeartShape();
-};
 </script>
 
 </body>
